force-app/main/default/objects/QTB_Foreign_Exchange__c/QTB_Foreign_Exchange__c.object-meta.xml
<CustomObject>
    <description>#QTB-24 Custom Object for foreign exchange</description>
    <label>Foreign Exchange</label>
    <nameField>
        <displayFormat>For-{00000000}</displayFormat>
        <label>Foreign Exchange Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Foreign Exchanges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>