force-app/main/default/objects/QTB_Foreign_Exchange__c/fields/QTB_Currency_From__c.field-meta.xml
<CustomField>
    <fullName>QTB_Currency_From__c</fullName>
    <description>#QTB-24 Currency From (Picklist) for Currency From Field(Used Billing Currency global Picklist value)</description>
    <label>Currency From</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QTB_Billing_Currency</valueSetName>
    </valueSet>
</CustomField>