force-app/main/default/objects/QTB_Foreign_Exchange__c/fields/QTB_Currency_To__c.field-meta.xml
<CustomField>
    <fullName>QTB_Currency_To__c</fullName>
    <description>#QTB-24 Currency From(Picklist) for Currency To Field(Used Billing Currency Global Picklist)</description>
    <label>Currency To</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QTB_Billing_Currency</valueSetName>
    </valueSet>
</CustomField>