force-app/main/default/objects/QTB_Foreign_Exchange__c/fields/QTB_Rate__c.field-meta.xml
<CustomField>
    <fullName>QTB_Rate__c</fullName>
    <description>#QTB-24 Rate(Number) To enter the rate</description>
    <label>Rate</label>
    <precision>14</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>