force-app/main/default/objects/QTB_Foreign_Exchange__c/fields/QTB_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>QTB_Start_Date__c</fullName>
    <description>#QTB-24 Start Date(date) To enter the start date</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>