force-app/main/default/objects/QTB_Foreign_Exchange__c/fields/QTB_Tax_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>QTB_Tax_Rate_Type__c</fullName>
    <description># SFCPQBLG-515 - Created for storing Tax Rate Type Values
#Gitlab 27004 - Tax Rate Type name change to Exchange Rate Type</description>
    <label>Exchange Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Bank Rate</fullName>
            </value>
            <value>
                <fullName>HU National Bank Rate</fullName>
            </value>
            <value>
                <fullName>RO National Bank Rate</fullName>
            </value>
            <value>
                <fullName>TR National Bank Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>