force-app/main/default/objects/QTB_Foreign_Exchange__c/validationRules/QTB_overlapping_dates.validationRule-meta.xml
<ValidationRule>
    <fullName>QTB_overlapping_dates</fullName>
    <active>true</active>
    <description>#QTB-24 Validation Rule For Overlapping Start and End Date</description>
    <errorConditionFormula>AND( QTB_OverLapping_Date_Check__c  = TRUE,NOT($Setup.Metadata_Activation_Settings__c.Disable_VR__c &amp;&amp; OR(ISBLANK($Setup.Metadata_Activation_Settings__c.SObject_API_Name__c), CONTAINS($Setup.Metadata_Activation_Settings__c.SObject_API_Name__c, &apos;QTB_Foreign_Exchange__c&apos;))))</errorConditionFormula>
    <errorMessage>Duplicate values</errorMessage>
</ValidationRule>