force-app/main/default/objects/QTB_Foreign_Exchange__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>QTB_Currency_From__c</columns>
    <columns>QTB_Currency_To__c</columns>
    <columns>QTB_Start_Date__c</columns>
    <columns>QTB_End_Date__c</columns>
    <columns>QTB_Rate__c</columns>
    <columns>QTB_Tax_Rate_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>